--- a/style.css
+++ b/style.css
@@ -22,11 +22,12 @@
 
 html {
     margin: 0 auto;
+	font-size: 1.2em;
 }
 
 body {
 	max-width: 800px;
-    font-size: 20px;
+    font-size: 1em;
     color: #FFFFFF;
     padding: 25px 25px 25px 25px;
     margin:auto;
@@ -45,18 +46,18 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 3em;
     line-height: 1.2;
 }
 
 h2 {
-	margin-top:50px;
-    font-size: 45px;
+	margin-top:2em;
+    font-size: 2em;
 }
 
 h3 {
 	font-weight: normal;
-    font-size: 30px;
+    font-size: 1.5em;
 }
 
 body {
