--- a/style.css
+++ b/style.css
@@ -26,10 +26,9 @@ html {
 }
 
 body {
-	max-width: 800px;
 	font-size: 1em;
 	color: #ffffff;
-	padding: 25px 25px 25px 25px;
+	padding: 25px 0 25px 0;
 	margin: auto;
 	line-height: 1.5;
 	background-color: #111118;
@@ -86,11 +85,20 @@ details summary {
 
 body {
 	font-family: body, serif;
+	padding: 0;
 }
 
 section {
 	padding: 2em 0px;
 	position: relative;
+}
+
+.center-width {
+	max-width: 800px;
+	margin: auto;
+
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 img {
@@ -126,6 +134,25 @@ section:nth-child(even)::before {
 	height: 100%;
 }
 
+.carousel {
+	display: flex;
+	overflow-x: auto;
+	gap: 20px;
+	padding: 20px;
+	scroll-snap-type: x mandatory;
+	height: 500px;
+	padding-left: calc(50% - 100px);
+	padding-right: calc(50% - 100px);
+}
+
+.carousel img {
+	height: 100%;
+	width: auto;
+	max-width: 100vw;
+	object-fit: cover;
+	scroll-snap-align: center;
+}
+
 iframe {
 	border: none;
 }
@@ -152,17 +179,18 @@ a img {
 		font-size: 1.5em;
 	}
 
-	section,
-	header {
-		padding: 20px;
-	}
-
 	body {
+		margin: 0;
+		padding: 0;
 		padding-left: 0px;
 		padding-right: 0px;
 	}
 
 	.verticalvid {
 		padding: 100% 0 0 0;
+	}
+
+	.carousel {
+		height: 100vw;
 	}
 }
