--- a/style.css
+++ b/style.css
@@ -25,15 +25,15 @@ html {
 	padding: 0;
 	font-size: 1.2em;
 	line-height: 1.5;
+	overflow-x: hidden;
 }
 
 body {
 	font-size: 1em;
 	color: #ffffff;
 	padding: 0;
-	margin: 2em auto;
+	margin: 0 auto;
 	background-color: #111118;
-	overflow-x: hidden;
 	font-family: body, serif;
 }
 
@@ -90,11 +90,24 @@ section {
 }
 
 section:first-of-type {
-	padding-top: 0;
+	padding-top: 2em;
 }
 
 section:last-of-type {
-	padding-bottom: 0;
+	padding-bottom: 2em;
+}
+
+section:nth-of-type(even)::before,
+footer section::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 100vw;
+	height: 100%;
+	z-index: -1;
+	background-color: #181820;
 }
 
 .center-width,
@@ -107,36 +120,31 @@ section:last-of-type {
 	padding-right: 20px;
 }
 
-img {
-	width: 100%;
-}
-
-section:nth-child(even)::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 100vw;
-	height: 100%;
-	z-index: -1;
-	background-color: #222229;
-}
-
-.webvid {
+.vid {
 	aspect-ratio: 16 / 9;
 	position: relative;
 	background-color: black;
 	padding: 0;
-	margin: 1em auto;
+	margin: 3em auto;
+	overflow: hidden;
+	border-radius: 10px;
 }
 
-.webvid * {
+#mainvid {
+	box-shadow:
+		0px 0px 300px 5px rgba(147, 168, 250, 0.5),
+		0px 0px 50px 5px #ffff;
+	max-width: 1000px;
+	margin-top: clamp(0px, calc((100vw - 1000px) / 2), 3em);
+}
+
+.vid * {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
+	background-color: black;
 }
 
 .carousel {
@@ -145,17 +153,17 @@ section:nth-child(even)::before {
 	gap: 20px;
 	padding: 20px;
 	scroll-snap-type: x mandatory;
-	height: 500px;
-	padding-left: calc(50% - 100px);
-	padding-right: calc(50% - 100px);
+	scroll-behavior: smooth;
+	align-items: flex-start; /* align shorter images at top */
 }
 
 .carousel img {
-	height: 100%;
-	width: auto;
-	max-width: 100vw;
-	object-fit: cover;
+	height: auto;
+	max-height: 500px; /* optional limit */
+	max-width: 95%;
+	flex-shrink: 0;
 	scroll-snap-align: center;
+	object-fit: contain;
 }
 
 iframe {
@@ -166,12 +174,20 @@ a {
 	color: #00eeee;
 }
 
-a:hover {
+a:hover,
+a:focus-visible {
 	color: #ff4444;
 }
 
 a img {
 	vertical-align: top;
+}
+
+@media screen and (max-width: 1000px) {
+	#mainvid {
+		border-radius: 0;
+		box-shadow: 0px 0px 300px 5px rgba(147, 168, 250, 0.5);
+	}
 }
 
 @media screen and (max-width: 700px) {
@@ -192,10 +208,11 @@ a img {
 	}
 
 	.carousel {
-		height: 100vw;
+		gap: 10px;
+		padding: 10px; /* align shorter images at top */
 	}
 
 	.hide-mobile {
-		display: none;
+		display: none !important;
 	}
 }
